--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
-<div class="row">
-  <div class="col p-5">
-    <div class="progress">
-      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Animated striped example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 10%"></div>
-    </div>
-  </div>
+<app-navbar></app-navbar>
+<div class="container pt-5">
+  <app-main-data></app-main-data>
 </div>
-
-<router-outlet></router-outlet>
