Add data fetch service

--- a/src/app/components/main-data/main-data.component.html
+++ b/src/app/components/main-data/main-data.component.html
@@ -1,67 +1,76 @@
-<div class="card p-4 shadow-sm">
-    <div class="card-body">
-        <div class="row gx-5">
-            <div class="col-3">
-                <img src="../../../assets/qr-example.png" class="img-thumbnail qr-code" alt="...">
+<div class="container pt-5">
+    <div class="card p-4 shadow-sm">
+        <div class="card-body">
+            <div class="row gx-5">
+                <div class="col-3">
+                    <img src="../../../assets/qr-example.png" class="img-thumbnail qr-code" alt="...">
 
-                <div class="list-group pt-2">
-                    <a href="#" class="list-group-item list-group-item-action">Link 1</a>
-                    <a href="#" class="list-group-item list-group-item-action">Link 1</a>
-                    <a href="#" class="list-group-item list-group-item-action">Link 1</a>
+                    <div class="list-group pt-2">
+                        <a href="#" class="list-group-item list-group-item-action">Link 1</a>
+                        <a href="#" class="list-group-item list-group-item-action">Link 2</a>
+                        <a href="#" class="list-group-item list-group-item-action">Link 3</a>
+                    </div>
+                </div>
+                <div class="col-9">
+                    <h1>Title</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut deleniti quisquam ratione, adipisci
+                        est
+                        a
+                        reprehenderit blanditiis totam accusantium suscipit incidunt debitis, neque voluptate expedita
+                        eaque
+                        natus, praesentium tempore. Quo.
+                        Debitis doloremque magnam porro? Eligendi quas explicabo quod enim quis laborum numquam vel esse
+                        in
+                        natus modi nulla expedita eius, quo consequuntur. Placeat, laudantium vel? Nam delectus fugiat
+                        repellendus distinctio?
+                        Nihil atque et facere ullam libero. Consequuntur illum rerum similique provident voluptatum
+                        officia
+                        omnis fugit vero corporis! Vitae, deserunt? Fugiat eaque, vel officiis earum ipsam veritatis aut
+                        error
+                        obcaecati numquam?
+                        Reprehenderit omnis beatae fuga quae neque temporibus minima optio libero sunt soluta impedit ut
+                        ex,
+                        doloribus ducimus eos! Aliquam vitae nam officia quod perferendis consectetur exercitationem
+                        molestias
+                        in, impedit eveniet.
+                        Illum repellat mollitia vitae nesciunt accusantium tempora iste nisi iure illo. Odio, magnam
+                        beatae
+                        accusamus quia rerum repellat harum quod culpa eveniet quos optio veritatis dolorum accusantium
+                        quasi
+                        provident ratione!
+                        Quae quos ut molestiae numquam dolor possimus sunt nemo cupiditate tenetur libero repudiandae
+                        similique
+                        eveniet adipisci nihil, atque delectus, laudantium rem nisi quia animi hic. Tenetur aliquam eum
+                        dolorum
+                        doloremque!
+                        Ipsum repellendus praesentium dolorem, facere a ipsam amet. Facere tenetur iusto maxime eaque
+                        maiores
+                        veniam ullam, optio omnis, ea, sunt veritatis deserunt laudantium consectetur. Iusto iure soluta
+                        ut
+                        placeat quo!
+                        Reprehenderit tempore iure hic, culpa explicabo odit nobis laborum deserunt et, distinctio
+                        temporibus
+                        ipsa! Dicta exercitationem porro dolorum dolorem. Tenetur soluta obcaecati fugit. Magni saepe
+                        veritatis
+                        reiciendis asperiores et earum.
+                        Voluptatem reprehenderit, sint eaque, esse adipisci nesciunt quae laborum rem aperiam iure
+                        excepturi
+                        aliquam, tenetur illo asperiores reiciendis! Dolorem earum cum id itaque optio suscipit quaerat
+                        mollitia
+                        quos numquam sint.
+                        Et quis molestiae asperiores, minima porro incidunt ea exercitationem possimus quaerat sapiente
+                        corporis
+                        enim voluptates quas in, nemo eos illo esse ut! Obcaecati ea maxime mollitia! Sequi incidunt
+                        rerum
+                        necessitatibus.
+                        Unde quibusdam nulla similique ipsa dignissimos reprehenderit reiciendis veniam perferendis cum
+                        assumenda velit ad eaque, repellendus, facere magnam mollitia quaerat tempore odit! Sunt facere
+                        dignissimos voluptates quasi, quae numquam quis.
+                        Obcaecati atque facere ut temporibus amet, pariatur magni ducimus nesciunt enim rem harum ipsa
+                        culpa
+                        eaque labore?</p>
                 </div>
             </div>
-            <div class="col-9">
-                <h1>Title</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut deleniti quisquam ratione, adipisci est
-                    a
-                    reprehenderit blanditiis totam accusantium suscipit incidunt debitis, neque voluptate expedita eaque
-                    natus, praesentium tempore. Quo.
-                    Debitis doloremque magnam porro? Eligendi quas explicabo quod enim quis laborum numquam vel esse in
-                    natus modi nulla expedita eius, quo consequuntur. Placeat, laudantium vel? Nam delectus fugiat
-                    repellendus distinctio?
-                    Nihil atque et facere ullam libero. Consequuntur illum rerum similique provident voluptatum officia
-                    omnis fugit vero corporis! Vitae, deserunt? Fugiat eaque, vel officiis earum ipsam veritatis aut
-                    error
-                    obcaecati numquam?
-                    Reprehenderit omnis beatae fuga quae neque temporibus minima optio libero sunt soluta impedit ut ex,
-                    doloribus ducimus eos! Aliquam vitae nam officia quod perferendis consectetur exercitationem
-                    molestias
-                    in, impedit eveniet.
-                    Illum repellat mollitia vitae nesciunt accusantium tempora iste nisi iure illo. Odio, magnam beatae
-                    accusamus quia rerum repellat harum quod culpa eveniet quos optio veritatis dolorum accusantium
-                    quasi
-                    provident ratione!
-                    Quae quos ut molestiae numquam dolor possimus sunt nemo cupiditate tenetur libero repudiandae
-                    similique
-                    eveniet adipisci nihil, atque delectus, laudantium rem nisi quia animi hic. Tenetur aliquam eum
-                    dolorum
-                    doloremque!
-                    Ipsum repellendus praesentium dolorem, facere a ipsam amet. Facere tenetur iusto maxime eaque
-                    maiores
-                    veniam ullam, optio omnis, ea, sunt veritatis deserunt laudantium consectetur. Iusto iure soluta ut
-                    placeat quo!
-                    Reprehenderit tempore iure hic, culpa explicabo odit nobis laborum deserunt et, distinctio
-                    temporibus
-                    ipsa! Dicta exercitationem porro dolorum dolorem. Tenetur soluta obcaecati fugit. Magni saepe
-                    veritatis
-                    reiciendis asperiores et earum.
-                    Voluptatem reprehenderit, sint eaque, esse adipisci nesciunt quae laborum rem aperiam iure excepturi
-                    aliquam, tenetur illo asperiores reiciendis! Dolorem earum cum id itaque optio suscipit quaerat
-                    mollitia
-                    quos numquam sint.
-                    Et quis molestiae asperiores, minima porro incidunt ea exercitationem possimus quaerat sapiente
-                    corporis
-                    enim voluptates quas in, nemo eos illo esse ut! Obcaecati ea maxime mollitia! Sequi incidunt rerum
-                    necessitatibus.
-                    Unde quibusdam nulla similique ipsa dignissimos reprehenderit reiciendis veniam perferendis cum
-                    assumenda velit ad eaque, repellendus, facere magnam mollitia quaerat tempore odit! Sunt facere
-                    dignissimos voluptates quasi, quae numquam quis.
-                    Obcaecati atque facere ut temporibus amet, pariatur magni ducimus nesciunt enim rem harum ipsa culpa
-                    eaque labore?</p>
-            </div>
-
         </div>
-
-
     </div>
 </div>
