Add mobile responsivity classes

--- a/src/app/components/main-data/main-data.component.html
+++ b/src/app/components/main-data/main-data.component.html
@@ -2,7 +2,7 @@
     <div class="card p-4 shadow-sm">
         <div class="card-body">
             <div class="row gx-5">
-                <div class="col-3">
+                <div class="col-12 col-md-3">
                     <img src="../../../assets/qr-example.png" class="img-thumbnail qr-code" alt="...">
 
                     <div class="list-group pt-2">
@@ -11,7 +11,7 @@
                         <a href="#" class="list-group-item list-group-item-action">Link 3</a>
                     </div>
                 </div>
-                <div class="col-9">
+                <div class="col-12 col-md-9">
                     <h1>Title</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut deleniti quisquam ratione, adipisci
                         est
